<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu"
    android:background="@color/gerovitalis_cyan"
    android:weightSum="200">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="40"
        android:src="@drawable/gerovitalis"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/ver_pacientes_txt"
        android:onClick="verPacientes"
        android:layout_weight="50"
        android:backgroundTint="@color/gerovitalis_blue"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/registrar_pacientes_txt"
        android:onClick="registrarPaciente"
        android:backgroundTint="@color/gerovitalis_blue"
        android:layout_weight="50"
        />
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/cerrar_sesion_txt"
        android:backgroundTint="@color/gerovitalis_blue"
        android:onClick="logout"
        android:layout_weight="60"/>
</LinearLayout>