<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gerovitalis_cyan"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pacientes_layout"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:context=".ListaPacientes">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="30"
                android:textStyle="bold"
                android:text="@string/dni_txt"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="50"
                android:textStyle="bold"
                android:text="@string/nombre_txt"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="20"
                android:textStyle="bold"
                android:text="@string/info_txt"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />
    </LinearLayout>
</ScrollView>
